Fixing some gaps with darkstrap

--- a/src/media/stylesheets/app.scss
+++ b/src/media/stylesheets/app.scss
@@ -129,6 +129,12 @@ footer .addthis_toolbox {
 	}
 }
 
+.dark .nav-tabs > .active > a:focus{
+  background-color: #2f2f2f;
+  color: white;
+  border-color: #666666 #666666 transparent #666666;
+}
+
 .facebook-block{
 	float:left;
 	width: 50%;
